# Writing-Website-Backend

./: .gitignore  README.md
core_microservice/: main.py  pyproject.toml
core_microservice/alembic/: env.py  script.py.mako
core_microservice/alembic/versions/: 7cde01cf4624_initial_migration.py  ca544509c853_initial_migration.py
core_microservice/src/: database.py  logging.py  models.py  schema.py  settings.py
core_microservice/src/routes/: stories.py  users.py
core_microservice/src/services/: auth.py  redis.py  stories.py
