[tool.poetry]
name = "core_microservice"
version = "0.1.0"
description = ""
authors = ["AbdullaK123 <abdullamaseeh123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
sqlmodel = "^0.0.22"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
